fixing a broken ref

--- a/groth1.tex
+++ b/groth1.tex
@@ -2313,7 +2313,7 @@ such that $\operatorname*{flip}\left(  \mathbf{B}\left(  T\right)  \right)
 
 \begin{proof}[$\mathbf{B}$ preserves ceq]
 Let $T\in\mathbf{R}$. As above, $\operatorname*{flip}\left(  T\right)  \overset{\ast
-}{\Rrightarrow}\mathbf{B}\left(  T\right)  $. Lemma \ref{lem.descent-resolution-*props} \textbf{(a)} and (\ref{pf.lem.BK.flip.ceq}) thus yield
+}{\Rrightarrow}\mathbf{B}\left(  T\right)  $. Lemma \ref{lem.descent-resolution-*props} \textbf{(a)} and Remark \ref{pf.lem.BK.flip.ircont} thus yield
 \[
 \operatorname*{ceq}\left(  \mathbf{B}\left(  T\right)  \right)
 =\operatorname*{ceq}\left(  \operatorname*{flip}\left(  T\right)  \right)
